Prod-EU/force-app/main/default/objects/CRM_Attachment_Event__e/CRM_Attachment_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event invoked from Kafka to Salesforce to attach document to an entity in Salesforce.</description>
    <label>CRM Attachment Event - In</label>
    <pluralLabel>CRM Attachment Events - In</pluralLabel>
</CustomObject>