Prod-EU/force-app/main/default/objects/CRM_Attachment_Event__e/fields/classification__c.field-meta.xml
<CustomField>
    <fullName>classification__c</fullName>
    <label>classification</label>
    <length>254</length>
    <type>Text</type>
</CustomField>