Prod-EU/force-app/main/default/objects/CRM_Attachment_Event__e/fields/content__c.field-meta.xml
<CustomField>
    <fullName>content__c</fullName>
    <label>content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>