Prod-EU/force-app/main/default/objects/CRM_Attachment_Event__e/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>