Prod-EU/force-app/main/default/objects/CRM_Attachment_Event__e/fields/operation__c.field-meta.xml
<CustomField>
    <fullName>operation__c</fullName>
    <label>operation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>