Prod-EU/force-app/main/default/objects/CRM_Attachment_Event__e/fields/referenceNumberName__c.field-meta.xml
<CustomField>
    <fullName>referenceNumberName__c</fullName>
    <label>referenceNumberName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>