Prod-EU/force-app/main/default/objects/CRM_Attachment_Event__e/fields/referenceNumberValue__c.field-meta.xml
<CustomField>
    <fullName>referenceNumberValue__c</fullName>
    <label>referenceNumberValue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>