Prod-EU/force-app/main/default/objects/CRM_Attachment_Event__e/fields/version__c.field-meta.xml
<CustomField>
    <fullName>version__c</fullName>
    <label>version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>